# Pulseboard

./: .env.example  .gitignore  CLAUDE.md  DEMO_GUIDE.md  DOCKER.md  IMPROVEMENT_PROPOSALS.md  README.md  STATUS.md  UI_IMPROVEMENTS.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: dashboards.py  feeds.py  panels.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/feeds/: __init__.py  base.py  crypto_price.py  http_json.py  manager.py  system_metrics.py
backend/app/hub/: events.py  hub.py
backend/app/models/: __init__.py  dashboard.py  feed.py  panel.py
backend/app/ws/: manager.py  router.py
backend/tests/integration/: test_api.py  test_websocket.py
backend/tests/unit/: test_config.py  test_feeds.py  test_hub.py  test_models.py
frontend/pulseboard-web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/pulseboard-web/scripts/: build-tailwind-css.js
frontend/pulseboard-web/src/: App.vue  style.css  tailwind.generated.css
frontend/pulseboard-web/src/__tests__/stores/: dashboards.test.ts  liveData.test.ts  ui.test.ts
frontend/pulseboard-web/src/api/: client.test.ts  client.ts
frontend/pulseboard-web/src/components/: ConnectionStatus.vue  PanelDialog.vue  ToastContainer.vue  ToastNotification.vue
frontend/pulseboard-web/src/components/panels/: PanelBar.vue  (+2 more)
frontend/pulseboard-web/src/composables/: useDashboardWebSocket.ts
frontend/pulseboard-web/src/router/: index.ts
frontend/pulseboard-web/src/stores/: dashboards.test.ts  dashboards.ts  liveData.test.ts  liveData.ts  notifications.ts  ui.ts
frontend/pulseboard-web/src/test/: helpers.ts  setup.ts
frontend/pulseboard-web/src/types/: index.ts
frontend/pulseboard-web/src/views/: DashboardListView.vue  DashboardLiveView.vue  FeedsView.vue
resources_and_files/: pulseboard_real_time_dashboard_technical_design_document.md
scripts/: backup.sh  dev_start.sh  dev_start_frontend.sh  restore.sh  seed_demo_data.py  start.sh  status.sh  stop.sh
